Changelog for GoodNews

- fixed sending activation email if activationEmail property is not set
- fixed a problem with detecting extended fields in form
- fixed Custom Resource Properties Resolver in GoodNews container installation (unsubscribeResource and profileResource properties)
- fixed template assignement for sample resources on package upgrade
- corrected poor thinking in registration-confirm resource


GoodNews 1.4.1-pl (2016-03-02)
--------------------------------------------------
- Added all missing custom validators from Login extra
- Added snippets, resources and chunks to allow full MODX user registration including newsletter subscription on a single page
- Even more refined subscription process
- Missing snippet params dont break Subscription, RequestLinks and ConfirmSubscription snippets any longer
- [#40] newsletter templates now have full access to all modUserProfile and GoodNewsSubscriberMeta fields as placeholders
- fixed a bug with tvs_below_content setting in Mailing editor
- [#3] send a status email to newsletter sender if mailing status changes
- renamed preinstalled Resource domcuments to prevent overwriting of existing
- preinstalled Resource documents aren't moved to tree root on package update (Installer)
- [#38] fixed a php warning in processhandler class

 
GoodNews 1.4.0-pl (2015-11-05)
--------------------------------------------------
- completely revised the Subscriber registration system (front-end)
- new professional system mail templates (activation, success, request links, etc.)
- fixed a few nasty bugs in Susbcriber registration
- [#22] enable subscription of users which already have an account in the MODX instance
- [#21] enable re-subscription of users with cancelled or forgotten subscriptions
- fixed security/privacy problems (now front-end forms will never tell if email addresses already exists)


GoodNews 1.3.9-pl (2015-10-23)
--------------------------------------------------
- improved robustness of mail processing